# Cardivu-Android-Demo-imageProcessing

./: .gitignore  READMD.txt  build.gradle  gradle.properties  local.properties  settings.gradle
SDAPI/: build.gradle
SDAPI/src/main/: AndroidManifest.xml
SDAPI/src/main/cpp/: CMakeLists.txt  dsp-lib.cpp  native-lib.cpp
SDAPI/src/main/cpp/DSPFilters/: License  biquad.cpp  biquad.h  butterworth.cpp  butterworth.h  cascade.cpp  cascade.h  common.h  design.cpp  design.h  dsp.h  filter.cpp  filter.h  layout.h  math_supplement.h  param.cpp  params.h  pole_filter.cpp  pole_filter.h  root_finder.cpp  root_finder.h  smoothed_filter.h  state.h  types.h  utilities.h
SDAPI/src/main/cpp/SMU_pupil/: SMU_PupilDiameter.cpp  SMU_PupilDiameter.h  SMU_real_double_fft.cpp  SMU_real_double_fft.h  SMU_real_double_fft_mixed.cpp  SMU_real_double_fft_mixed.h  SMU_roi.cpp  SMU_roi.h  SMU_signal.cpp  SMU_signal.h  SMU_use_opencv.h
SDAPI/src/main/cpp/fft/: real_double_fft.cpp  real_double_fft.h  real_double_fft_mixed.cpp  real_double_fft_mixed.h  stft.cpp  stft.h
SDAPI/src/main/cpp/iir/: biquad.cpp  biquad.h  butterworth.cpp  butterworth.h  cascade.cpp  cascade.h  common.h  design.cpp  design.h  dsp.h  filter.cpp  filter.h  layout.h  math_supplement.h  param.cpp  params.h  pole_filter.cpp  pole_filter.h  root_finder.cpp  root_finder.h  smoothed_filter.h  state.h  types.h  utilities.h
SDAPI/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: button.xml  ic_baseline_location_on_24.xml  ic_logo.xml  rounded_rect_bg.xml
app/src/main/res/layout/: activity_main.xml  fragment_home.xml  fragment_measure.xml
app/src/main/res/menu/: bottom_navigation_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  (+3 more)
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: .gitignore  build.gradle
(+26 files in other folders)
